# yolo-object-detection

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  MODEL_CARD.md  PRD.md  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
examples/: iou_demo.py  simple_detection.py
frontend/: index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
k8s/: api.yaml  frontend.yaml  monitoring.yaml  namespace.yaml  triton.yaml
monitoring/: prometheus.yml
notebooks/: build_part2.py  colab_gpu_stack.ipynb  colab_gpu_stack_executed.ipynb  tensorrt_benchmark.ipynb  train_yolov8_colab.ipynb  train_yolov8_colab_part2.ipynb
outputs/: results_summary.json  speed_benchmark.json
outputs/gpu_stack_results/: gpu_monitoring.csv  gpu_stack_results.json  load_test_summary.csv
outputs/realistic_unseen/annotated/: inference_summary.json
outputs/realistic_unseen/labels/: realistic_00.txt  realistic_01.txt  realistic_02.txt  realistic_03.txt  realistic_04.txt  realistic_05.txt  realistic_06.txt
outputs/tensorrt_results/: tensorrt_benchmark_results.json  tensorrt_benchmark_summary.csv
outputs/unseen_results/: unseen_inference_results.json
scripts/: create_detection_gif.py  create_detection_gif_v2.py  create_showcase_gif.py  generate_realistic_wafers.py  run_unseen_inference.py
src/: __init__.py  data_generator.py  mvtec_integration.py  yolo_utils.py
src/api/: server.py
tests/: load_test.py  test_integration.py  test_yolo_utils.py
triton_model_repo/yolo_wafer_defect/: config.pbtxt
(+5 files in other folders)
